--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -51,11 +51,11 @@ data:
 # TRAINING CONFIGURATION
 # =============================================================================
 training:
-  epochs: 100
+  epochs: 80
   batch_size: 16
   imgsz: 640
-  patience: 50
-  save_period: 10
+  patience: 20
+  save_period: -1  # Disable periodic checkpoints; keep best/last only
   workers: 8
   device: null
   
@@ -64,7 +64,7 @@ training:
     lr0: 0.01
     lrf: 0.01
     momentum: 0.937
-    weight_decay: 0.0005
+    weight_decay: 0.001
     warmup_epochs: 3.0
     warmup_momentum: 0.8
     warmup_bias_lr: 0.1
@@ -85,7 +85,8 @@ augmentation:
   flipud: 0.0
   fliplr: 0.5
   mosaic: 1.0
-  mixup: 0.0
+  close_mosaic: 10
+  mixup: 0.1
   copy_paste: 0.0
 
 # =============================================================================
@@ -94,7 +95,7 @@ augmentation:
 output:
   project: "PCB_Defect_Detection"
   name: "train"
-  exist_ok: true
+  exist_ok: false  # Avoid reusing old folders and mixed outputs
   save: true
   save_txt: true
   save_conf: true
