--- a/configs/config_targeting_small_objects.yaml
+++ b/configs/config_targeting_small_objects.yaml
@@ -42,11 +42,11 @@ data:
 # TRAINING CONFIGURATION 
 # =============================================================================
 training:
-  epochs: 100  
+  epochs: 80  
   imgsz: 640    # Keep identical preprocessing across models for fair comparison
   batch_size: 16
-  patience: 50
-  save_period: 10
+  patience: 20
+  save_period: -1  # Disable periodic checkpoints; keep best/last only
   workers: 8
   device: null
   
@@ -55,7 +55,7 @@ training:
     lr0: 0.01
     lrf: 0.01
     momentum: 0.937
-    weight_decay: 0.0005
+    weight_decay: 0.001
     warmup_epochs: 3.0
     warmup_momentum: 0.8
     warmup_bias_lr: 0.1
@@ -64,6 +64,7 @@ training:
 # AUGMENTATION CONFIGURATION 
 # =============================================================================
 augmentation:
+  # Intentionally aligned with configs/config.yaml for fair model comparison.
   enabled: true
   hsv_h: 0.015
   hsv_s: 0.7
@@ -76,7 +77,8 @@ augmentation:
   flipud: 0.0
   fliplr: 0.5
   mosaic: 1.0
-  mixup: 0.0
+  close_mosaic: 10
+  mixup: 0.1
   copy_paste: 0.0
 
 # =============================================================================
@@ -85,7 +87,7 @@ augmentation:
 output:
   project: "PCB_Defect_Detection"
   name: "small_objects_p2"
-  exist_ok: true
+  exist_ok: false  # Avoid reusing old folders and mixed outputs
   save: true
   save_txt: true
   save_conf: true
@@ -101,3 +103,14 @@ wandb:
   run_name: null
   tags: ["yolov8-p2", "pcb", "small-objects"]
   mode: "online"
+
+# =============================================================================
+# OPTIONAL ANALYSIS HOOKS (executed after training for P2 models)
+# =============================================================================
+analysis:
+  conf_sweep:
+    enabled: true
+    # Use validation split for threshold selection to avoid test leakage.
+    split: "val"
+    iou: 0.5
+    values: [0.05, 0.10, 0.15, 0.20, 0.25, 0.30, 0.40, 0.50, 0.60]
